--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<title>연습문제</title>
+	<title>연습문제!</title>
 	<style>
 		#container {  /* 전체 콘텐츠를 감싸는 div */
 			width:650px;  /* 너비 */
@@ -22,10 +22,12 @@
 		}
 
 		h2 {
-			color: red;
+			font-size: 1.5em;
+			color: #ff0000;
 			text-align: center;
 		}
 		p {
+			font-size: 1.2em;
 			text-align: center;
 			font-weight: bold;
 			
